--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -16,9 +16,9 @@ body
 
 
 @import './blocks/form'
-@import './blocks/comments'
+@import './blocks/results'
 
 @import './blocks/form-media'
-@import './blocks/comments-media'
+@import './blocks/results-media'
 
 @import './base/media'
