--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -17,6 +17,7 @@ body
 
 @import './blocks/form'
 @import './blocks/results'
+@import './blocks/load'
 
 @import './blocks/form-media'
 @import './blocks/results-media'
