--- a/src/sass/blocks/_results.sass
+++ b/src/sass/blocks/_results.sass
@@ -2,13 +2,17 @@
 	list-style-type: none
 	padding: 0
 	width: 100%
+	color: $main-color
+	font-weight: 500
+	font-size: 20px
+	text-align: center
 .repo
 	border: solid 1px $white-color
 	border-radius: 15px
 	width: 100%
 	padding: 20px 40px
 	display: grid
-	grid-template: repeat(3, 1fr) / repeat(2, 1fr)
+	grid-template: repeat(3, 1fr) / repeat(2, 50%)
 	gap: 20px
 	margin-bottom: 20px
 	&__name
@@ -17,6 +21,7 @@
 		font-size: 18px
 		text-decoration: none
 		word-wrap: break-word
+		text-align: left
 		&:hover
 			color: $white-color
 			text-decoration: underline
@@ -24,6 +29,7 @@
 		color: $main-color
 		font-weight: 500
 		font-size: 16px
+		text-align: left
 		a
 			color: $white-color
 			font-weight: 700
@@ -32,6 +38,7 @@
 				color: $white-color
 				text-decoration: underline
 	&__data
+		text-align: left
 		color: $main-color
 		font-weight: 500
 		font-size: 16px
